SUBDIRS = src tools data doc #examples

ACLOCAL_AMFLAGS = -I config
EXTRA_DIST = autogen.sh libdbus-c++.spec libdbus-c++.spec.in

EXTRA_DIST += dbus-c++-1.pc

MAINTAINERCLEANFILES = \
	configure \
	Makefile.in \
	aclocal.m4 \
	compile \
	config.guess \
	config.sub \
	depcomp \
	install-sh \
	ltmain.sh \
	mdate-sh \
	missing \
	mkinstalldirs \
	libdbus-c++.spec

