actions_16dir = $(datadir)/@PACKAGE@/icons/hicolor/16x16/actions
dist_actions_16_DATA = \
	hicolor/16x16/actions/download-and-upload.png \
	hicolor/16x16/actions/upload.png \
	hicolor/16x16/actions/download.png \
	hicolor/16x16/actions/statistics.png

actions_22dir = $(datadir)/@PACKAGE@/icons/hicolor/22x22/actions
dist_actions_22_DATA = hicolor/22x22/actions/statistics.png

actions_32dir = $(datadir)/@PACKAGE@/icons/hicolor/32x32/actions
dist_actions_32_DATA = hicolor/32x32/actions/statistics.png


apps_16dir = $(datadir)/icons/hicolor/16x16/apps
dist_apps_16_DATA = hicolor/16x16/apps/@PACKAGE@.png

apps_22dir = $(datadir)/icons/hicolor/22x22/apps
dist_apps_22_DATA = hicolor/22x22/apps/@PACKAGE@.png

apps_24dir = $(datadir)/icons/hicolor/24x24/apps
dist_apps_24_DATA = hicolor/24x24/apps/@PACKAGE@.png

apps_32dir = $(datadir)/icons/hicolor/32x32/apps
dist_apps_32_DATA = hicolor/32x32/apps/@PACKAGE@.png

apps_48dir = $(datadir)/icons/hicolor/48x48/apps
dist_apps_48_DATA = hicolor/48x48/apps/@PACKAGE@.png

apps_72dir = $(datadir)/icons/hicolor/72x72/apps
dist_apps_72_DATA = hicolor/72x72/apps/@PACKAGE@.png


categories_16dir = $(datadir)/@PACKAGE@/icons/hicolor/16x16/categories
dist_categories_16_DATA = \
	hicolor/16x16/categories/torrents-seeding.png \
	hicolor/16x16/categories/torrents-all.png \
	hicolor/16x16/categories/torrents-paused.png \
	hicolor/16x16/categories/torrents-checking.png \
	hicolor/16x16/categories/torrents-downloading.png \
	hicolor/16x16/categories/torrents-waiting-for-download.png \
	hicolor/16x16/categories/torrents-uploading.png \
	hicolor/16x16/categories/torrents-tracker-error.png


mimetypes_16dir = $(datadir)/@PACKAGE@/icons/hicolor/16x16/mimetypes
dist_mimetypes_16_DATA = hicolor/16x16/mimetypes/rss.png


status_16dir = $(datadir)/@PACKAGE@/icons/hicolor/16x16/status
dist_status_16_DATA = \
	hicolor/16x16/status/torrent-uploading.png \
	hicolor/16x16/status/torrent-downloading.png \
	hicolor/16x16/status/torrent-seeding.png \
	hicolor/16x16/status/torrent-seeding-paused.png \
	hicolor/16x16/status/torrent-seeding-tracker-error.png \
	hicolor/16x16/status/torrent-waiting-for-download.png \
	hicolor/16x16/status/torrent-allocating-tracker-error.png \
	hicolor/16x16/status/torrent-checking-tracker-error.png \
	hicolor/16x16/status/torrent-allocating.png \
	hicolor/16x16/status/torrent-allocating-paused.png \
	hicolor/16x16/status/torrent-checking.png \
	hicolor/16x16/status/torrent-checking-paused.png \
	hicolor/16x16/status/torrent-downloading-tracker-error.png \
	hicolor/16x16/status/torrent-downloading-paused.png \
	hicolor/16x16/status/torrent-uploading-paused.png \
	hicolor/16x16/status/torrent-uploading-tracker-error.png \
	hicolor/16x16/status/torrent-waiting-for-download-paused.png \
	hicolor/16x16/status/torrent-waiting-for-download-tracker-error.png

